GAPDays will be in StA

--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ permalink:        pretty
 # Setup
 title:            'GAP Days Summer 2024'
 tagline:          'A workshop for GAP developers and users'
-description:      '11-15 March 2024'
-location:         'University of Kaiserslautern-Landau'
+description:      '26-30 August 2024'
+location:         'University of St Andrews'
 url:              https://www.gapdays.de
 baseurl:          /gapdays2024-summer
 email:            gapdays2024-summer@gapdays.de
